--- a/css/style.css
+++ b/css/style.css
@@ -1372,10 +1372,18 @@ Gallery
 .gallery {
   display: table;
   max-width: 100%;
-  margin: auto; }
+  margin: auto;
+  margin-bottom: -36px; }
   @media only screen and (min-width: 640px) {
     .gallery {
       max-width: 93.5%; } }
+  @media only screen and (min-width: 768px) {
+    .gallery {
+      margin-top: -30px; } }
+  @media only screen and (min-width: 1170px) {
+    .gallery {
+      margin-top: -58px;
+      margin-bottom: -28px; } }
   .gallery .galleryItem {
     display: inline-block;
     width: 50%;
@@ -1527,7 +1535,8 @@ article[id^="galleryItemContent"] {
   height: auto;
   z-index: 901;
   display: none;
-  margin: auto 0; }
+  margin: auto 0;
+  overflow-y: scroll; }
   @media only screen and (min-width: 640px) {
     article[id^="galleryItemContent"] {
       top: 10%;
