--- a/css/style.css
+++ b/css/style.css
@@ -1151,6 +1151,12 @@ main > p > a {
   text-decoration: underline;
   color: #1A8B9D; }
 
+#instaFeed {
+  margin-bottom: -35px; }
+  @media only screen and (min-width: 1170px) {
+    #instaFeed {
+      margin-bottom: -28px; } }
+
 #instaFeed > li {
   list-style: none;
   display: inline-block;
